--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,9 +24,15 @@
     "@syncfusion/ej2-react-popups": "^19.4.52",
     "@syncfusion/ej2-react-richtexteditor": "^19.4.50",
     "@syncfusion/ej2-react-schedule": "^19.4.50",
+    "@syncfusion/ej2-react-spreadsheet": "^22.2.11",
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.1",
+    "chart.js": "^4.3.3",
     "formik": "^2.4.3",
+    "ml-regression": "^5.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-icons": "^4.3.1",
